Added shifting to next arg after options

--- a/Backup/makefile
+++ b/Backup/makefile
@@ -1,10 +1,11 @@
 SRC=main.sh
+OPTS=-d "1"
 ARGS=./files/file1.txt ./files/file2.txt ./files/file3.txt ./files/file4.txt
 
 all: run
 
 run:
-	./$(SRC) $(ARGS)
+	./$(SRC) $(OPTS) $(ARGS)
 
 clean:
 	echo ""
