added make tests

--- a/Backup/makefile
+++ b/Backup/makefile
@@ -1,11 +1,30 @@
-SRC=main.sh
+SRC=backup
 OPTS=-d "1"
-ARGS=./files/file1.txt ./files/file2.txt ./files/file3.txt ./files/file4.txt
+FILES=./files/file1.txt ./files/file2.txt ./files/file3.txt ./files/file4.txt
 
-all: run
+all: test
 
-run:
-	./$(SRC) $(OPTS) $(ARGS)
+test: opt_arg_run arg_opt_run invalid_args inalivd_opts
+
+opt_arg_run:
+	@echo "Valid"
+	@./$(SRC) $(OPTS) $(FILES)
+	@echo
+
+arg_opt_run:
+	@echo "Invalid Usage"
+	@./$(SRC) $(FILES) $(OPTS) || echo
+	@echo
+
+invalid_args:
+	@echo "Invalid File"
+	@./$(SRC) notrealfile.txt $(FILES) || echo
+	@echo
+
+inalivd_opts:
+	@echo "Invalid Opt"
+	@./$(SRC) -notreal NotRealOpt $(FILES) || echo
+	@echo
 
 clean:
 	echo ""
