Check if dircetory exists

--- a/Backup/makefile
+++ b/Backup/makefile
@@ -1,5 +1,5 @@
 SRC=backup
-OPTS=-d "1"
+OPTS=-d .
 FILES=./files/file1.txt ./files/file2.txt ./files/file3.txt ./files/file4.txt
 
 all: test
@@ -7,24 +7,20 @@ all: test
 test: opt_arg_run arg_opt_run invalid_args inalivd_opts
 
 opt_arg_run:
-	@echo "Valid"
+	@echo "Valid: "
 	@./$(SRC) $(OPTS) $(FILES)
-	@echo
 
 arg_opt_run:
-	@echo "Invalid Usage"
+	@echo "Invalid Usage: "
 	@./$(SRC) $(FILES) $(OPTS) || echo
-	@echo
 
 invalid_args:
-	@echo "Invalid File"
+	@echo "Invalid File: "
 	@./$(SRC) notrealfile.txt $(FILES) || echo
-	@echo
 
 inalivd_opts:
-	@echo "Invalid Opt"
+	@echo "Invalid Opt: "
 	@./$(SRC) -notreal NotRealOpt $(FILES) || echo
-	@echo
 
 clean:
 	rm *.txt
